--- a/qurator/sbb_images/webapp_react/src/styles/RandomImages.css
+++ b/qurator/sbb_images/webapp_react/src/styles/RandomImages.css
@@ -1,124 +1,29 @@
 .image-grid {
     display: grid;
     grid-template-columns: repeat(4, 1fr);
-    gap: 1em;
+    gap: var(--semantic-distance-large);
     width: 80%;
     height: auto;
-    margin-top: 5em;
+    margin-top: 0; 
+    margin-bottom: var(--semantic-distance-mega);  
+}
+
+@media (max-width: 62rem) { /* --semantic-breakpoint-tablet-landscape */
+.image-grid {
+      grid-template-columns: repeat(2, 1fr);
   }
-  
-/* .image-card {
-  border: 1px solid #D6D8DF; 
-  border-radius: 0.3em;
-  display: grid;
-  grid-template-rows: auto auto auto; 
-  width: 100%;
-  max-width: 450px;
-  gap: 1em;
-  padding-bottom: 1em;
-  transition: all 0.2s ease-in-out;
 }
-  
-.image-card:hover {
-  border: 1px solid #000000;
-}
-  
-.image-container {
-  grid-row: 1;
-  background-color: #F0F0F3; 
-  border-radius: 0.3em 0.3em 0 0;
-  max-width: 100%;
-  max-height: 100%;
-  aspect-ratio: 1 / 1;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  padding: 0.5rem;
-}
-  
-.image-card:hover .image-container {
-  background-color: #E3E4E9; 
-}
-  
-.image-container .card-image {
-  max-width: 100%;
-  max-height: 100%;
-  height: auto;
-  object-fit: contain;
-  display: block;
-  margin: 0 auto;
-}
-  
-.title-wrapper {
-  grid-row: 2; 
-  height: 3.6em;
-  height: 3rem;
-  line-height: 1.5rem;
-  overflow: hidden; 
-  margin: 0 auto;
-  padding: 0 0.7em 0 0.7em;
-  text-align: left; 
-}
-  
-.image-card a {
-  color: #2B4474;
-} 
 
-.image-card a:hover {
-  color: #182645;
-}  */
-
-  /* .image-card a:visited {
-    color: #42455E;
-  }  */
-
+@media (max-width: 36rem) { /* --semantic-breakpoint-mobile-landscape */
+  .image-grid {
+    grid-template-columns: 1fr;
+  }
+}
+ 
 .browse-search {
   width: 80%;
-  margin: 0 auto 0.5rem auto;
-  font-weight: bold;
-  font-size: 1rem;
-}
-  
-.image-grid {
-  margin-top: 0; 
-  margin-bottom: 3rem;  
-}
-
-.title-wrapper {
-  height: 3rem;         /* 2 lines */
-  line-height: 1.5rem;  
-  overflow: hidden;     
-  text-overflow: ellipsis; /* ellipsis for overflow */
-  display: -webkit-box;  /* for multi-line ellipsis */
-  -webkit-line-clamp: 2; /* limit to 2 lines */
-  -webkit-box-orient: vertical;
-}
-
-/* Tooltip styles */
-a[data-title] {
-  position: relative;
-}
-
-a[data-title]:hover::after {
-  content: attr(data-title);
-  position: absolute;
-  left: 50%;
-  bottom: 100%;
-  transform: translateX(-50%);
-  background-color: #FFFFFF;
-  color: #000000;
-  border: 1px solid #D6D8DF;
-  border-radius: 0.25rem;
-  padding: 0.5rem;
-  padding: 1rem;
-  z-index: 10;
-  width: max-content;
-  max-width: 300px;
-  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
-  text-align: left;
-  font-size: 0.9rem;
-  margin-bottom: 0.5rem;
-  white-space: normal;
+  margin: 0 auto var(--semantic-distance-compact) auto;
+  font-weight: var(--semantic-font-weight-bold);
+  font-size: var(--semantic-font-size-text); /* Necessary because it's an h2, this is to make it smaller*/
 }
   
