--- a/qurator/sbb_images/webapp_react/src/styles/InterruptedLine.css
+++ b/qurator/sbb_images/webapp_react/src/styles/InterruptedLine.css
@@ -1,14 +1,14 @@
 .interrupted-line {
     display: flex;
-    align-items: center;
-    width: 100%;
+    align-items: center; 
+    width: 100%; 
 }
 
 .interrupted-line::before,
 .interrupted-line::after {
-    content: "";
+    content: ""; 
     flex: 1 0 0;
     height: 1px;
-    background-color: #BCC0CA; /*SPK-Grau 50*/
-    margin: 0 10px;
+    background-color: var(--semantic-color-stroke-base); /* #BCC0CA */
+    margin: 0 var(--semantic-distance-compact);  
 }
